Disappeared <h2>, divider, fail Bottom Sheep

--- a/src/app/modules/disappeared/disappeared.component.html
+++ b/src/app/modules/disappeared/disappeared.component.html
@@ -1,1 +1,7 @@
-<p>disappeared works!</p>
+
+    <h2>Desaparecido</h2>
+    <mat-divider></mat-divider>
+   <!--
+       
+       <button mat-raised-button (click)="openBottomSheet()">Open File</button>
+--> 
