--- a/src/app/modules/navigation/navigation.component.html
+++ b/src/app/modules/navigation/navigation.component.html
@@ -9,7 +9,7 @@
   <mat-toolbar-row>
     <div class="menu-elements">
       <a mat-button [routerLink]="'/adoptions'">Adoções</a>
-      <a mat-button [routerLink]="">Desaparecidos</a>
+      <a mat-button [routerLink]="'/disappeared'">Desaparecidos</a>
       <a mat-button [routerLink]="">Ongs</a>
     </div>
   </mat-toolbar-row>
