Criando mod. users, compnt. e vinculo de navegação

--- a/src/app/modules/navigation/navigation.component.html
+++ b/src/app/modules/navigation/navigation.component.html
@@ -3,7 +3,7 @@
     <img src="./../../../assets/icons/helpets_icon.svg" class="img">
     <span class="menu-spacer"></span>
     <button mat-icon-button>
-      <mat-icon class="size-icon">account_circle</mat-icon>
+      <mat-icon class="size-icon" [routerLink]="'/users'">account_circle</mat-icon>
     </button>
   </mat-toolbar-row>
   <mat-toolbar-row>
