--- a/src/app/modules/users/users.component.html
+++ b/src/app/modules/users/users.component.html
@@ -1,1 +1,11 @@
-<p>users works!</p>
+
+<div class="user">
+    <div class= "users-content">
+        <h1 class="mat-display-2">Área de Login e Cadastro da Helpets</h1>
+        <h1 class="mat-h1">Faça login na sua conta.</h1>
+        <a mat-flat-button color="primary">Acessar Conta</a>
+        <br><hr/>
+        <h4 class="mat-h4">Ou cadastre seu perfil!</h4>
+        <a mat-flat-button color="primary">Cadastrar</a>
+    </div>
+</div>
