Criando a rota adoptions e vinculando a barra de navegação

--- a/src/app/modules/navigation/navigation.component.html
+++ b/src/app/modules/navigation/navigation.component.html
@@ -8,7 +8,7 @@
   </mat-toolbar-row>
   <mat-toolbar-row>
     <div class="menu-elements">
-      <a mat-button [routerLink]="">Adoções</a>
+      <a mat-button [routerLink]="'/adoptions'">Adoções</a>
       <a mat-button [routerLink]="">Desaparecidos</a>
       <a mat-button [routerLink]="">Ongs</a>
     </div>
