--- a/src/app/modules/adoptions/new-adoption/new-adoption.component.css
+++ b/src/app/modules/adoptions/new-adoption/new-adoption.component.css
@@ -1,3 +1,13 @@
+.content {
+  
+}
+
+.form {
+  min-width: 150px;
+  max-width: 500px;
+  width: 100%
+}
+
 .form-element {
   padding: 5px 0px, 25px 2px;
   width: 100%;
@@ -5,4 +15,8 @@
 
 .button {
   width:100%;
+}
+
+:host ::ng-deep .mat-horizontal-stepper-header-container {
+  display: none !important;
 }
