Iniciando implementacao new-user e lgin user

--- a/src/app/modules/new-user/new-user.component.html
+++ b/src/app/modules/new-user/new-user.component.html
@@ -1,1 +1,8 @@
 <p>new-user works!</p>
+<div class="user">
+    <div class= "users-content">
+        <h1 class="mat-h1">Preencha os campos e crie uma conta Helpets.</h1>
+        <br />
+        <a mat-flat-button color="primary" [routerLink]>Entrar</a>
+    </div>
+</div>
