--- a/src/app/modules/adoptions/new-adoption/new-adoption.component.html
+++ b/src/app/modules/adoptions/new-adoption/new-adoption.component.html
@@ -1,28 +1,61 @@
 <div class="content">
   <h2 mat-dialog-title>Publicar doação</h2>
-  <mat-horizontal-stepper linear="true" #stepper class=".mat-horizontal-stepper-header-container">
-    <!--<mat-step>
-
-    </mat-step> -->
-    <mat-step [stepControl]="adoptionFormGroup" editable="false">
-      <form [formGroup]="adoptionFormGroup" class="form">
+  <mat-horizontal-stepper linear="true" #stepper>
+    <mat-step [stepControl]="_adoptionFormGroup" editable="false">
+      <form [formGroup]="_adoptionFormGroup" class="form">
         <mat-form-field class="form-element">
-          <mat-label>Nome</mat-label>
-          <input matInput formControlName="name" placeholder="Nome" required>
+          <mat-label>Selecione o tipo de doação</mat-label>
+          <mat-select formControlName="publication_type" required>
+            <mat-option [value]="'individual'">Doação individual</mat-option>
+            <mat-option [value]="'cria'">Doação de ninhada</mat-option>
+          </mat-select>
         </mat-form-field>
         <mat-form-field class="form-element">
-          <mat-label>Bairro</mat-label>
-          <input matInput formControlName="bairro" placeholder="Nome" required>
-        </mat-form-field>
-        <mat-form-field *ngIf="!isNewCria" class="form-element">
-          <mat-label>Rua e nº da casa</mat-label>
-          <input matInput formControlName="rua" placeholder="Nome" required>
-        </mat-form-field>
-        <mat-form-field class="form-element">
-          <mat-label>Rede Social</mat-label>
-          <input matInput formControlName="rede" placeholder="Nome" required>
+          <mat-label>Selecione a espécie do animal</mat-label>
+          <mat-select formControlName="species" required>
+            <mat-option *ngFor="let specie of _species" [value]="species">{{specie.name}}</mat-option>
+          </mat-select>
         </mat-form-field>
       </form>
+      <div class="form-element">
+        <button class="button" color="primary" mat-button (click)="nextStep()" matStepperNext
+          [disabled]="_adoptionFormGroup.invalid">Próximo</button>
+      </div>
+    </mat-step>
+    <mat-step [stepControl]="_adoptionFormGroup" editable="false">
+      <form [formGroup]="_adoptionFormGroup" class="form">
+        <mat-form-field *ngIf="!_isNewCria" class="form-element">
+          <mat-label>Nome do animal</mat-label>
+          <input matInput formControlName="pet_name" placeholder="Nome">
+        </mat-form-field>
+        <mat-form-field *ngIf="_isNewCria" class="form-element">
+          <mat-label>Quantidade de animais disponíveis</mat-label>
+          <input matInput formControlName="quantity" placeholder="Nome" required>
+        </mat-form-field>
+        <mat-form-field *ngIf="!_isNewCria" class="form-element">
+          <mat-label>Gênero do animal</mat-label>
+          <mat-select formControlName="gender">
+            <mat-option [value]="'macho'">Fêmea</mat-option>
+            <mat-option [value]="'femea'">Macho</mat-option>
+          </mat-select>
+        </mat-form-field>
+      </form>
+      <div class="form-element">
+        <button class="button" color="primary" mat-button (click)="nextStep()" matStepperNext>Próximo</button>
+      </div>
+    </mat-step>
+    <mat-step [stepControl]="_adoptionFormGroup" editable="false">
+      <form [formGroup]="_adoptionFormGroup" class="form">
+        <mat-form-field class="form-element">
+          <mat-label>Descrição</mat-label>
+          <textarea matInput cdkTextareaAutosize #autosize="cdkTextareaAutosize" formControlName="description"
+            placeholder="Descrição"></textarea>
+        </mat-form-field>
+      </form>
+      <div class="form-element">
+        <button mat-button class="button" color="primary" [disabled]="_adoptionFormGroup.invalid"
+          (click)="createNewAdoption()">Adicionar curso</button>
+      </div>
     </mat-step>
   </mat-horizontal-stepper>
   <div class="form-element">
