Criando o componente disappeared-detail

--- a/src/app/modules/disappeared/disappeared-detail/disappeared-detail.component.html
+++ b/src/app/modules/disappeared/disappeared-detail/disappeared-detail.component.html
@@ -1,15 +1,17 @@
-
 <app-loading *ngIf="!Disappeared"></app-loading>
 
 <div *ngIf="Disappeared">
-  <div  class="content" fxLayout="column" fxLayout.gt-sm="row" fxLayoutAling="start center" fxLayoutAling.gt-sm="center start" fxLayoutGap="16px" >
+  <div class="content" fxLayout="column" fxLayout.gt-sm="row" fxLayoutAling="start center"
+    fxLayoutAling.gt-sm="center start" fxLayoutGap="16px">
     <h2>{{Disappeared.user.name}}</h2>
     <mat-divider></mat-divider>
-    <div> <!--  class="row-line"  -->
+    <div>
+      <!--  class="row-line"  -->
       <div fxFlex="50%" fxFlex.gt-sm="25%">
         <mat-card class="mat-elevation-z0">
-            
-              <img mat-card-image class="disappearedCover" [src]="Disappeared.image" alt="Photo of a {{Disappeared.pet_name}}">
+
+          <img mat-card-image class="disappearedCover" [src]="Disappeared.image"
+            alt="Photo of a {{Disappeared.pet_name}}">
         </mat-card>
       </div>
       <div fxFlex="50%" fxFlex.gt-sm="75%">
@@ -23,8 +25,8 @@
       </div>
     </div>
     <div>
-        <h2 *ngIf="Disappeared.user.contact.cell_phone">{{Disappeared.user.contact.cell_phone}}</h2>
-        <h2 *ngIf="Disappeared.user.contact.instagram">{{Disappeared.user.contact.instagram}}</h2>
-      </div>
+      <h2 *ngIf="Disappeared.user.contact.cell_phone">{{Disappeared.user.contact.cell_phone}}</h2>
+      <h2 *ngIf="Disappeared.user.contact.instagram">{{Disappeared.user.contact.instagram}}</h2>
     </div>
+  </div>
 </div>
