--- a/src/app/modules/disappeared/disappeared-card/disappeared-card.component.css
+++ b/src/app/modules/disappeared/disappeared-card/disappeared-card.component.css
@@ -8,4 +8,12 @@
     padding: 16px
   }
 
+  .routerLinkDisappeared {
+    cursor: pointer;
+    transition: transform .2s;
+  }
+
+  .routerLinkDisappeared:hover{
+    transform: scale(1.03);
+  }
   
