--- a/src/app/modules/navigation/navigation.component.html
+++ b/src/app/modules/navigation/navigation.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar class="toolbar">
   <mat-toolbar-row>
     <a [routerLink]="'/home'"><img src="./../../../assets/icons/helpets_icon.svg" class="img"></a>
-    
+
     <span class="menu-spacer"></span>
     <button mat-icon-button>
       <mat-icon class="size-icon" [routerLink]="'/users'">account_circle</mat-icon>
@@ -11,7 +11,7 @@
     <div class="menu-elements">
       <a mat-button [routerLink]="'/adoptions'">Adoções</a>
       <a mat-button [routerLink]="'/disappeared'">Desaparecidos</a>
-      <a mat-button [routerLink]="">Ongs</a>
+      <a mat-button [routerLink]="'/ong'">Ongs</a>
     </div>
   </mat-toolbar-row>
 </mat-toolbar>
