Configurando caminho e vinculando a navegação

--- a/src/app/modules/navigation/navigation.component.html
+++ b/src/app/modules/navigation/navigation.component.html
@@ -10,7 +10,7 @@
     <div class="menu-elements">
       <a mat-button [routerLink]="'/adoptions'">Adoções</a>
       <a mat-button [routerLink]="">Desaparecidos</a>
-      <a mat-button [routerLink]="">Ongs</a>
+      <a mat-button [routerLink]="'/ong'">Ongs</a>
     </div>
   </mat-toolbar-row>
 </mat-toolbar>
