Criar caminho e vincular ao menu de navegação

--- a/src/app/modules/navigation/navigation.component.html
+++ b/src/app/modules/navigation/navigation.component.html
@@ -12,7 +12,7 @@
       <a mat-button [routerLink]="'/adoptions'">Adoções</a>
       <a mat-button [routerLink]="'/disappeared'">Desaparecidos</a>
       <a mat-button [routerLink]="'/ong'">Ongs</a>
-      <a mat-button [routerLink]="">Sobre</a>
+      <a mat-button [routerLink]="'/about'">Sobre</a>
     </div>
   </mat-toolbar-row>
 </mat-toolbar>
