Implementando service, model e componentes de ong

--- a/src/app/modules/login-user/login-user.component.html
+++ b/src/app/modules/login-user/login-user.component.html
@@ -3,6 +3,6 @@
     <div class= "users-content">
         <h1 class="mat-h1">Preencha o campos e Acesse a Helpets.</h1>
         <br />
-        <a mat-flat-button color="primary" [routerLink]>Entrar</a>
+        <a mat-flat-button color="primary" [routerLink]="">Entrar</a>
     </div>
 </div>
