--- a/src/app/modules/ongs/ong-card/ong-card.component.css
+++ b/src/app/modules/ongs/ong-card/ong-card.component.css
@@ -1,8 +1,16 @@
+.userOng-image {
+  height: 300px;
+}
+
+.content>mat-card {
+  width: 200px;
+}
+
 .example-card {
-    max-width: 400px;
-  }
-  
-  .example-header-image {
-    background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
-    background-size: cover;
-  }
+  max-width: 400px;
+}
+
+.example-header-image {
+  background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
+  background-size: cover;
+}
