--- a/src/app/modules/ongs/ong-card/ong-card.component.html
+++ b/src/app/modules/ongs/ong-card/ong-card.component.html
@@ -1,3 +1,13 @@
-<p>ong-card works!</p>
-
+<mat-card class="mat-elevation-z4">
+    <mat-card-header>
+      <mat-card-title>{{User.name}}</mat-card-title>
+      <mat-card-subtitle>{{User.user_type}}</mat-card-subtitle>
+    </mat-card-header>
+    <img mat-card-image class="userOng-image" [src]="User.image" alt="Photo of {{User.name}}">
+    <mat-card-content>
+      <p>
+        {{sliceSnyposis(User.description)}}
+      </p>
+    </mat-card-content>
+</mat-card>
   
