--- a/src/app/modules/ongs/ong/ong.component.html
+++ b/src/app/modules/ongs/ong/ong.component.html
@@ -1,19 +1,8 @@
-<div *ngFor="let user of User">
-    <mat-card class="example-card">
-        <mat-card-header>
-          <mat-card-title>{{user.name}}</mat-card-title>
-          <mat-card-subtitle>{{user.user_type}}</mat-card-subtitle>
-        </mat-card-header>
-        <img mat-card-image [src]="user.image" alt="Photo of {{user.nome}}">
-        <mat-card-content>
-          <p>
-            {{user.description}}
-          </p>
-        </mat-card-content>
-        <mat-card-actions>
-          <a mat-flat-button color="primary" [routerLink]="">Saiba Mais</a>
-        </mat-card-actions>
-      </mat-card>
+<div class="content" fxLayout="row wrap" fxLayoutGap="16px grid">
+  <div fxFlex="25%" fxFlex.xs="100%" fxFlex.sm="33%" *ngFor="let user of User">
+    <app-ong-card [User] = "user"></app-ong-card>
+  </div>
+    
 </div>
 
 
