--- a/src/app/modules/ongs/ong/ong.component.html
+++ b/src/app/modules/ongs/ong/ong.component.html
@@ -1,3 +1,5 @@
+<h1 class="mat-h2">Ong's</h1>
+<br />
 <div class="content" fxLayout="row wrap" fxLayoutGap="16px grid">
   <div fxFlex="25%" fxFlex.xs="100%" fxFlex.sm="33%" *ngFor="let user of User">
     <app-ong-card [User] = "user"></app-ong-card>
