--- a/src/app/modules/ongs/ong-detail/ong-detail.component.html
+++ b/src/app/modules/ongs/ong-detail/ong-detail.component.html
@@ -1,1 +1,92 @@
-<p>ong-detail works!</p>
+
+
+    <div class="content" fxLayout="column" fxLayout.gt-sm="row" fxLayoutAlign="start center" 
+    fxLayoutAlign.gt-sm="center start" fxLayoutGap="16px">
+
+        <div fxFlex="50%" fxFlex.gt-sm="25%">
+            <mat-card class="mat-elevation-z0">
+                <img mat-card-image class="userCover" [src]="User.image" alt="Photo of a {{User.name}}">
+            </mat-card>
+            <mat-card class="mat-elevation-z3">
+                <mat-card-header>
+                    <img mat-card-avatar class="ongImage" [src]="User.image" alt="Photo of a {{User.name}}">
+                    <mat-card-title>{{User.name}}</mat-card-title>
+                    <mat-card-subtitle>CNPJ: {{User.cnpj}}</mat-card-subtitle>
+                </mat-card-header>
+                <mat-card-header>
+                    {{User.description}}
+                </mat-card-header>
+            </mat-card>
+
+            <div class="account">
+                <mat-card class="mat-elevation-z3">
+                    <mat-card-header>
+                        <div class="row">
+                            <span >
+                                Informações bancarias para recebimento de doaçoes:
+                            </span>
+                            <br /><br />
+                            <span >
+                                <mat-icon>account_balance</mat-icon>
+                                {{User.bank_account}}
+                            </span>
+                            <br>
+                            <span >
+                                <mat-icon>credit_card</mat-icon>
+                                {{User.paypal_account}}
+                            </span>
+                        </div>
+                    </mat-card-header>                
+                </mat-card>
+            </div>
+            
+        </div>
+    
+        <div fxFlex="50%" fxFlex.gt-sm="75%">
+            <mat-card class="mat-elevation-z0">
+                    <div class="row">
+                        <span class="">
+                            Entre em contato atraves:
+                        </span>
+                        <br /><br />
+                        <span >
+                            <mat-icon>phone</mat-icon>
+                            {{User.landline}}
+                        </span>
+                        <br />
+                        <span >
+                            <mat-icon>phone_android</mat-icon>
+                            {{User.cell_phone}}
+                        </span>
+                        <br />
+                        <span >
+                            <mat-icon>phonelink</mat-icon>
+                            {{User.instagram}}
+                        </span>
+                        <br />
+                        <span >
+                            <mat-icon>phonelink</mat-icon>
+                            {{User.facebook}}
+                        </span>
+                        <br />
+                        <span >
+                            <mat-icon>home</mat-icon>
+                            {{User.street}}
+                        </span>
+                        &nbsp;
+                        <span >
+                            {{User.number}}
+                        </span>
+                        &nbsp;
+                        <span >
+                            {{User.city}}
+                        </span>
+                        <br />
+                        <span >
+                            {{User.apartament_number}}
+                        </span>
+                    </div>
+            </mat-card>
+        </div>
+
+    </div>
