--- a/src/app/modules/adoptions/new-adoption/new-adoption.component.html
+++ b/src/app/modules/adoptions/new-adoption/new-adoption.component.html
@@ -31,8 +31,8 @@
         <mat-form-field class="form-element">
           <mat-label>Gênero do animal</mat-label>
           <mat-select formControlName="gender">
-            <mat-option [value]="'macho'">Fêmea</mat-option>
-            <mat-option [value]="'femea'">Macho</mat-option>
+            <mat-option [value]="'Fêmea'">Fêmea</mat-option>
+            <mat-option [value]="'Macho'">Macho</mat-option>
           </mat-select>
         </mat-form-field>
       </form>
@@ -45,9 +45,9 @@
         <mat-form-field class="form-element">
           <mat-label>Maturidade</mat-label>
           <mat-select formControlName="maturity">
-            <mat-option [value]="'filhote'">Filhote</mat-option>
-            <mat-option [value]="'jovem'">Jovem</mat-option>
-            <mat-option [value]="'adulto'">Adulto</mat-option>
+            <mat-option [value]="'Filhote'">Filhote</mat-option>
+            <mat-option [value]="'Jovem'">Jovem</mat-option>
+            <mat-option [value]="'Adulto'">Adulto</mat-option>
           </mat-select>
         </mat-form-field>
         <mat-form-field class="form-element">
