--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,3 @@
-<app-navigation></app-navigation>
+<!-- <app-sidenav *ngIf="_router.url.includes('admin')"></app-sidenav> -->
+
+<app-navigation ></app-navigation>
